--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 spacy
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 pandas
 scikit-learn
 torch
 PyPDF2
 python-docx
+spacy-lookups-data
